<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cgps_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="godma531@naver.com">hae</maintainer>
  <license>Apache-2.0</license>

   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   
  <exec_depend>pkg-config</exec_depend>

  <!-- Buildtool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>